--- a/index.html
+++ b/index.html
@@ -61,43 +61,45 @@
         </p>
       </div>
     </header>
-    <main>
+    <main class="main">
       <section class="section section__grid">
         <h2 class="section__title section__how-to">
           Почему сосредоточиться так сложно
         </h2>
-        <h3 class="section__subtitle section__advices">Многозадачность</h3>
-        <p class="section__text section__advices">
-          Особенно сложно сосредоточиться, когда задач много и все они — важные.
-          Где же легендарная многозадачность, когда она так нужна вам (и всем
-          нанимающим менеджерам этого мира)? А дело в том, что её просто не
-          существует. Исследователи
-          <a class="link" href="https://dana.org/news-and-insights/">выяснили</a
-          >, что мозгу тяжело концентрироваться даже на двух делах одновременно.
-          А когда в поле внимания попадает несколько важных задач, организм
-          паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
-          этого мы работаем невнимательно: ошибаемся и быстро устаём.
-        </p>
-        <h3
-          class="section__subtitle  section__advices"
-        >
-          Дофамин
-        </h3>
-        <p class="section__text section__advices">
-          С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-          невозможности сосредоточиться замешана и полная противоположность
-          стрессу — дофамин. Это вещество участвует в системе вознаграждения
-          мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то
-          более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это
-          время и выделяется дофамин — и мы чувствуем удовольствие. Получается
-          замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
-          получаешь.
-        </p>
+        <article>
+          <h3 class="section__subtitle section__advices">Многозадачность</h3>
+          <p class="section__text section__advices">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи
+            <a class="link" href="https://dana.org/news-and-insights/"
+              >выяснили</a
+            >, что мозгу тяжело концентрироваться даже на двух делах
+            одновременно. А когда в поле внимания попадает несколько важных
+            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+            устаём.
+          </p>
+          <h3 class="section__subtitle section__advices">Дофамин</h3>
+          <p class="section__text section__advices">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+            что-то более «приятное» для мозгов. Например, смотрим лайки в
+            соцсетях. В это время и выделяется дофамин — и мы чувствуем
+            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </p>
+        </article>
       </section>
-      <section class="section">
-        <h2 class="section__title">Что снижает концентрацию внимания?</h2>
+      <section class="section section-causes">
+        <h2 class="section__title section__title-width">
+          Что снижает концентрацию внимания?
+        </h2>
         <div class="section__content">
-          <div class="section__pair">
+          <article class="section__pair">
             <h3 class="section__subtitle">Многозадачность</h3>
             <p class="section__text">
               Как концентрация может снижаться из-за… концентрации? Любая
@@ -107,8 +109,8 @@
               собранными всё время — невозможно. Концентрация — мышца, и она
               может не выдержать, если не давать ей отдохнуть.
             </p>
-          </div>
-          <div class="section__pair">
+          </article>
+          <article class="section__pair">
             <h3 class="section__subtitle">Еда</h3>
             <p class="section__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -118,11 +120,9 @@
               углеводов» заканчивается, мы чувствуем усталость и сонливость. И
               хотим ещё больше быстрых углеводов.
             </p>
-          </div>
-          <div class="section__pair">
-            <h3 class="section__subtitle">
-              Гаджеты
-            </h3>
+          </article>
+          <article class="section__pair">
+            <h3 class="section__subtitle">Гаджеты</h3>
             <p class="section__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -132,78 +132,84 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </div>
+          </article>
         </div>
       </section>
-      <section class="section section__grid">
+      <section class="section section__grid section-advices">
         <h2 class="section__title section__how-to">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-        <h3 class="section__subtitle section__advices">
-          5 простых (на самом деле не очень) советов
-        </h3>
-        <h4
-          class="section__subtitle_weight-regular section__subtitle section__subtitle-advice-shift section__advices"
-        >
-          Представьте небо и облака
-        </h4>
-        <p class="section__text section__advices">
-          Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-          успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-          раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
-          глаза и представить, что чистое небо — это вы, а облака — тревожные
-          мысли. И сколько бы их ни было — ясное небо всегда будет где-то там,
-          за тучами, и никуда не денется. Это упражнение поможет вернуться в
-          настоящий момент, а не волноваться о потенциальных проблемах из
-          будущего.
-        </p>
-        <h4
-          class="section__subtitle_weight-regular section__subtitle  section__advices"
-        >
-          Включите музыку
-        </h4>
-        <p class="section__text section__advices">
-          Но не любую, и не любимую. Любимая может быть связана с сильными
-          положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
-          тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
-          включить плейлист с «белым шумом» или нейромузыкой.
-        </p>
-        <h4
-          class="section__subtitle_weight-regular section__subtitle section__advices"
-        >
-          Прогуляйтесь
-        </h4>
-        <p class="section__text section__advices">
-          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-          <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как
-          после просмотра городских пейзажей она наоборот понижается. Можно
-          совместить прогулку с физическими упражнениями или бегом — так в мозг
-          поступит ещё больше кислорода и он будет лучше работать. Но и простая
-          двадцатиминутная прогулка — тоже отличный вариант.
-        </p>
-        <h4
-          class="section__subtitle_weight-regular section__subtitle section__advices"
-        >
-          Хорошо ешьте
-        </h4>
-        <p class="section__text section__advices">
-          Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
-          препятствуют резким скачкам сахара в крови. Например, с высоким
-          содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
-          коричневый рис, хлеб из цельнозерновой пшеницы.
-        </p>
-        <h4
-          class="section__subtitle_weight-regular section__advices section__subtitle"
-        >
-          Читайте
-        </h4>
-        <p class="section__text section__advices">
-          Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-          прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
-          А вот интересная книга способна затянуть и на несколько часов и круто
-          тренирует направленное внимание.
-        </p>
+        <article>
+          <h3 class="section__subtitle section__advices">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <h4
+            class="section__subtitle_weight-regular section__subtitle section__subtitle-advice-shift section__advices"
+          >
+            Представьте небо и облака
+          </h4>
+          <p class="section__text section__advices">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+            раз и мешают эти сложные задачи делать. В такие моменты можно
+            закрыть глаза и представить, что чистое небо — это вы, а облака —
+            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            где-то там, за тучами, и никуда не денется. Это упражнение поможет
+            вернуться в настоящий момент, а не волноваться о потенциальных
+            проблемах из будущего.
+          </p>
+          <h4
+            class="section__subtitle_weight-regular section__subtitle section__advices"
+          >
+            Включите музыку
+          </h4>
+          <p class="section__text section__advices">
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист с «белым шумом» или нейромузыкой.
+          </p>
+          <h4
+            class="section__subtitle_weight-regular section__subtitle section__advices"
+          >
+            Прогуляйтесь
+          </h4>
+          <p class="section__text section__advices">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            <a
+              class="link"
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+              >показал</a
+            >, что созерцание природы повышает концентрацию, в то время как
+            после просмотра городских пейзажей она наоборот понижается. Можно
+            совместить прогулку с физическими упражнениями или бегом — так в
+            мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+            простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
+          <h4
+            class="section__subtitle_weight-regular section__subtitle section__advices"
+          >
+            Хорошо ешьте
+          </h4>
+          <p class="section__text section__advices">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица,
+            фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+          <h4
+            class="section__subtitle_weight-regular section__advices section__subtitle"
+          >
+            Читайте
+          </h4>
+          <p class="section__text section__advices">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
+            прочитать пост в соцсети, достаточно нескольких минут или даже
+            секунд. А вот интересная книга способна затянуть и на несколько
+            часов и круто тренирует направленное внимание.
+          </p>
+        </article>
       </section>
       <section class="gallery">
         <h3 class="section__subtitle section__subtitle_gallery">
